@@ -1,28 +1,0 @@
-# $NetBSD: Makefile,v 1.26 2006/04/17 13:47:00 wiz Exp $
-
-.include "../../x11/qt3-libs/Makefile.common"
-
-PKGNAME=		qt3-psql-${QTVERSION}
-PKGREVISION=		1
-COMMENT=		QT postgresql driver
-
-CONFIGURE_ARGS+=	-I${QTDIR}/include \
-			-I${PGSQL_PREFIX}/include/postgresql/server \
-			-L${QTDIR}/lib
-
-BUILD_QT3=		yes
-
-do-build:
-	(cd ${WRKSRC}/plugins/src/sqldrivers/psql; \
-		${SETENV} ${MAKE_ENV} ${GMAKE})
-
-SQLDRVDIR=	${QTPREFIX}/plugins/sqldrivers
-
-do-install:
-	${INSTALL_DATA_DIR} ${SQLDRVDIR}
-	${LIBTOOL} ${INSTALL_DATA} ${WRKSRC}/plugins/sqldrivers/libqsqlpsql.la \
-		${SQLDRVDIR}
-
-.include "../../x11/qt3-libs/buildlink3.mk"
-.include "../../mk/pgsql.buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
